<resources>
    <string name="app_name">GetAsset</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    // Login
    <string name="username">Username</string>
    <string name="email">Email</string>

    // Reservation Status
    <string name="reservation_status">Reservation Status</string>

    // Item Reservation
    <string name="table">Table</string>
    <string name="chair">Chair</string>
    <string name="ITEquip">IT Equipment</string>
    <string name="quantity">Quantity:</string>

    <string name="item_reservation">Item Reservation</string>
    <string name="item_reservation_it">Item Reservation: IT</string>
    <string name="speaker">Speaker</string>
    <string name="microphone">Microphone</string>
    <string name="item_reservation_details">Item Reservation Details</string>
    <string name="item">Item:</string>
    <string name="description">Description:</string>
    <string name="item_instruction">Please select date to check availability of the item.</string>

    <string name="department">Department:</string>
    <string name="book_instruction">Please fill in the following details.</string>
    <string name="phone_no">Phone No.</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="quantity_word">Quantity</string>
    <string name="item_reserve_successful">The item is reserved. Please head to the department on the respective date to get the item.</string>

    // Classroom Reservation
    <string-array name="dates">
        <item>20/7/2020</item>
        <item>21/7/2020</item>
        <item>22/7/2020</item>
        <item>23/7/2020</item>
        <item>24/7/2020</item>
    </string-array>
    <string-array name="time">
        <item>9am-10am</item>
        <item>10am-11am</item>
        <item>11am-12pm</item>
        <item>12pm-1pm</item>
        <item>1pm-2pm</item>
        <item>2pm-3pm</item>
        <item>3pm-4pm</item>
        <item>4pm-5pm</item>
        <item>5pm-6pm</item>
        <item>6pm-7pm</item>
        <item>7pm-8pm</item>
        <item>8pm-9pm</item>
    </string-array>
    <string-array name="classroom_type">
        <item>Seminar Rooms (20 capacity)</item>
        <item>Classrooms (50-100 capacity)</item>
    </string-array>
    <string-array name="classroom_No1">
        <item>B1 101B</item>
        <item>B1 101C</item>
    </string-array>
    <string-array name="classroom_No2">
        <item>B1 B08</item>
        <item>B1 B09</item>
        <item>B1 B10</item>
        <item>B1 213</item>
        <item>B1 214</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="quantity_available">Quantity Available:</string>
    <string name="required_quantity">Quantity is required.</string>
    <string name="required_usage">Usage is required.</string>
    <string name="required_phoneNum">Phone number is required.</string>
    <string name="error_quantity_warning">"Please input amount between 1 to %1$d"</string>
    <string name="itemCapital">ITEM</string>
    <string name="classroomCapital">CLASSROOM</string>
    <string name="please_select_a_date">Please select a date.</string>
    <string name="book">Book</string>
    <string name="field_empty">FIELD CANNOT BE EMPTY</string>
    <string name="wrong_password">WRONG PASSWORD</string>
    <string name="password_retrieve">You are retrieving the items. Please request the staff to input the password.</string>
    <string name="password_return">You are returning the items. Please request the staff to input the password.</string>
    <string name="invalid_login">Email or password invalid. Please try again.</string>
    <string name="please_input_password">Please input password</string>
    <string name="submit">Submit</string>
    <string name="usage">Usage</string>


</resources>