<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_status">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/RS_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/reservation_status"
            android:textColor="#0C0C0C"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/status_item"
            android:layout_width="305dp"
            android:layout_height="202dp"
            android:layout_below="@id/RS_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/item_status"
            android:text="@string/itemCapital"
            android:textColor="#FFF"
            android:textSize="50dp"/>

        <Button
            android:id="@+id/status_classroom"
            android:layout_width="305dp"
            android:layout_height="202dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/status_item"
            android:layout_marginTop="30dp"
            android:background="@drawable/classroom_status"
            android:text="@string/classroomCapital"
            android:textColor="#FFF"
            android:textSize="40dp"/>


    </RelativeLayout>

</FrameLayout>