<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    tools:context=".fragment_item_reservation_details_two">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:overScrollMode="always">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/IR_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/item_reservation_details"
                android:textColor="#0C0C0C"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_item"
                android:contentDescription="@string/table"
                android:layout_width="117dp"
                android:layout_height="114dp"
                android:layout_below="@id/IR_details_title"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="42dp"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:src="@drawable/table" />

            <TextView
                android:id="@+id/ItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/image_item"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/ItemName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_item"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/ItemName"
                android:layout_toEndOf="@id/ItemName"
                android:textColor="#130202"
                android:textSize="20sp"
                android:text="Quantity" />

            <TextView
                android:id="@+id/ItemDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/ItemName"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/department" />

            <TextView
                android:id="@+id/ItemDepartment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ItemName"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/ItemDepartment"
                android:layout_toEndOf="@id/ItemDepartment"
                android:textColor="#130202"
                android:textSize="20sp"
                android:text="Quantity" />

            <TextView
                android:id="@+id/ItemDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/ItemDepartment"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/description" />

            <TextView
                android:id="@+id/ItemDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ItemDepartment"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/ItemDesc"
                android:layout_toEndOf="@id/ItemDesc"
                android:textColor="#130202"
                android:textSize="20sp"
                android:text="Quantity" />

            <TextView
                android:id="@+id/ItemInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ItemDesc"
                android:layout_centerHorizontal="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/book_instruction"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/IR_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ItemInstruction"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone_no"
                android:textColor="#130202"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/IR_edit_phone"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/IR_phone_no"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="#EAE4E4"
                android:ems="10"
                android:enabled="false"
                android:inputType="phone" />

            <TextView
                android:id="@+id/IR_reservation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/IR_edit_phone"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/reservation_date"
                android:textColor="#130202"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_Date"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/IR_reservation_date"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="20dp"
                android:background="#EAE4E4" />

            <TextView
                android:id="@+id/IR_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner_Date"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/quantity_word"
                android:textColor="#130202"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/IR_edit_amount"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/IR_amount"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="#EAE4E4"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />

            <TextView
                android:id="@+id/IR_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/IR_edit_amount"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="Usage"
                android:textColor="#130202"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextUsage"
                android:layout_width="304dp"
                android:layout_height="100dp"
                android:layout_below="@id/IR_usage"
                android:layout_marginStart="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:background="#EAE4E4"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_below="@id/editTextUsage"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_layout"
                android:text="@string/save"
                android:textColor="#F6F0F0" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/button_save"
                android:layout_toEndOf="@id/button_save"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_layout"
                android:text="@string/cancel"
                android:textColor="#F6F0F0"
                android:layout_marginRight="50dp" />


        </RelativeLayout>

    </ScrollView>
</FrameLayout>