<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    tools:context=".fragment_item_reservation_details_one">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:overScrollMode="always">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/IR_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/item_reservation_details"
                android:textColor="#0C0C0C"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_item"
                android:contentDescription="@string/table"
                android:layout_width="117dp"
                android:layout_height="114dp"
                android:layout_below="@id/IR_details_title"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="42dp"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                android:src="@drawable/table" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/image_item"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/itemName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_item"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/itemName"
                android:layout_toEndOf="@id/itemName"
                android:textColor="#130202"
                android:textSize="20sp"
                android:text="Quantity" />

            <TextView
                android:id="@+id/itemDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/itemName"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/department" />

            <TextView
                android:id="@+id/itemDepartment2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemName"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/itemDepartment"
                android:layout_toEndOf="@id/itemDepartment"
                android:textColor="#130202"
                android:textSize="20sp"
                android:text="Quantity" />

            <TextView
                android:id="@+id/itemDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/itemDepartment"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/description" />

            <TextView
                android:id="@+id/itemDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemDepartment"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/itemDesc"
                android:layout_toEndOf="@id/itemDesc"
                android:textColor="#130202"
                android:textSize="20sp"
                android:text="Quantity" />

            <TextView
                android:id="@+id/itemInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemDesc"
                android:layout_centerHorizontal="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/item_instruction"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxDate="07/24/2020"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/itemInstruction"
                android:layout_marginTop="30dp"/>
            <TextView
                android:id="@+id/itemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/calendarView"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="50dp"
                android:textColor="#130202"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/itemAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calendarView"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@id/itemQuantity"
                android:layout_toEndOf="@id/itemQuantity"
                android:textColor="#130202"
                android:textSize="20sp"
                android:text="Quantity" />

            <Button
                android:id="@+id/button_book_item"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/calendarView"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_layout"
                android:text="Book"
                android:textColor="#F8F5F5"
                android:textSize="18sp" />



        </RelativeLayout>
    </ScrollView>

</FrameLayout>